--- a/versions.gradle
+++ b/versions.gradle
@@ -1,15 +1,14 @@
 ext.versions = [
         // Core
-        javalin    : '3.7.0',
-        mongodb    : '3.12.2',
-        jackson    : '2.10.3',
-        lombok     : '1.18.12',
+        javalin: '3.7.0',
+        mongodb: '3.12.2',
+        jackson: '2.10.3',
+        lombok : '1.18.12',
 
         // Logging
-        slf4j      : '1.7.30',
-        logback    : '1.2.3',
+        slf4j  : '1.7.30',
+        logback: '1.2.3',
 
         // Tests
-        junit      : '5.6.0',
-        restAssured: '4.2.0'
+        junit  : '5.6.0'
 ]
